# cpp-numeric-system

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  benchmark.cpp
doc/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
numeric-system/: CMakeLists.txt
numeric-system/include/: BinaryArithmetic.h  FactorialArithmetic.h  Internal.h
numeric-system/source/: BinaryArithmetic.cpp  FactorialArithmetic.cpp
tests/: CMakeLists.txt  internal-test.cpp  unittests.cpp
tests/examples/: ex-1.cpp
tools/: run-tests.bat  run-tests.sh
tools/.impl-readme-ci-generation/: ci_parser.py  example_processor.py  generation-readme.py  templates.py  utils.py
tools/.impl-readme-ci-generation/generators/: benchmark_table.py  compatibility.py  system_info.py
tools/impl/: README.md.template  plot-benchmarks.py
